[gd_scene load_steps=7 format=3 uid="uid://jdnw27mqvc40"]

[ext_resource type="Script" path="res://menu.gd" id="1_uoejg"]
[ext_resource type="Texture2D" uid="uid://cxum5sfk2jfu2" path="res://menuwallpaper.jpg" id="2_2weby"]
[ext_resource type="Texture2D" uid="uid://v3uauu2cmeai" path="res://glow.png" id="3_nmklj"]
[ext_resource type="Texture2D" uid="uid://btcuk6vxnsa6n" path="res://simon.png" id="4_l7qv3"]
[ext_resource type="Texture2D" uid="uid://c2xcus84sugyb" path="res://newSays.png" id="5_7fobl"]
[ext_resource type="Texture2D" uid="uid://b46ju4avc0fns" path="res://playBtn.png" id="6_tcmh8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uoejg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1138.0
offset_top = -645.0
offset_right = 1152.0
offset_bottom = 653.0
color = Color(0.15072, 0.29856, 0.386205, 1)

[node name="wallpaper" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 2316.0
offset_bottom = 1303.0
texture = ExtResource("2_2weby")
expand_mode = 1

[node name="glow" type="TextureRect" parent="ColorRect"]
modulate = Color(1, 0, 1, 0.592157)
layout_mode = 0
offset_left = 176.0
offset_top = -196.0
offset_right = 2114.0
offset_bottom = 895.0
texture = ExtResource("3_nmklj")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -769.0
offset_top = -639.0
offset_right = 607.0
offset_bottom = -269.0
texture = ExtResource("4_l7qv3")
expand_mode = 2

[node name="subtitleRef" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.447
anchor_top = 0.259
anchor_right = 0.719
anchor_bottom = 0.498
offset_left = -241.944
offset_top = -436.832
offset_right = 460.712
offset_bottom = -88.704
grow_horizontal = 2
grow_vertical = 2
color = Color(0.636787, 0.000301491, 0.636783, 0)

[node name="TextureRect" type="TextureRect" parent="subtitleRef"]
layout_mode = 0
offset_left = -462.0
offset_top = -96.0
offset_right = 457.0
offset_bottom = 152.0
texture = ExtResource("5_7fobl")
expand_mode = 1

[node name="subtitleTimer" type="Timer" parent="subtitleRef"]
wait_time = 5.0
autostart = true

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -436.0
offset_top = 172.0
offset_right = 422.0
offset_bottom = 460.0
texture_normal = ExtResource("6_tcmh8")
ignore_texture_size = true
stretch_mode = 4

[connection signal="timeout" from="subtitleRef/subtitleTimer" to="." method="_on_subtitle_timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_menu_button_pressed"]
